--- a/packages/ui/src/components/tooltip/TooltipContent.astro
+++ b/packages/ui/src/components/tooltip/TooltipContent.astro
@@ -8,73 +8,136 @@ type Props = {
   sideOffset?: number;
   side?: "top" | "bottom" | "left" | "right";
   align?: "start" | "center" | "end";
+  alignOffset?: number;
+  avoidCollisions?: boolean;
+  collisionPadding?: number;
+  portal?: boolean;
 } & HTMLAttributes<"div">;
 
 const {
   class: className = "",
-  sideOffset = 6,
+  sideOffset,
   side = "top",
   align = "center",
+  alignOffset,
+  avoidCollisions,
+  collisionPadding,
+  portal,
   ...rest
 } = Astro.props as Props;
 
+const indicatorVariants = cva("pointer-events-none absolute border-4", {
+  variants: {
+    side: {
+      top: "border-foreground border-b-0 border-r-transparent border-l-transparent top-full",
+      bottom:
+        "border-foreground border-t-0 border-r-transparent border-l-transparent bottom-full",
+      left: "border-foreground border-r-0 border-t-transparent border-b-transparent left-full",
+      right:
+        "border-foreground border-l-0 border-t-transparent border-b-transparent right-full",
+    },
+    align: {
+      start: "",
+      center: "",
+      end: "",
+    },
+  },
+  compoundVariants: [
+    { side: "top", align: "start", class: "left-2" },
+    { side: "top", align: "center", class: "left-1/2 -translate-x-1/2" },
+    { side: "top", align: "end", class: "right-2" },
+    { side: "bottom", align: "start", class: "left-2" },
+    { side: "bottom", align: "center", class: "left-1/2 -translate-x-1/2" },
+    { side: "bottom", align: "end", class: "right-2" },
+    { side: "left", align: "start", class: "top-2" },
+    { side: "left", align: "center", class: "top-1/2 -translate-y-1/2" },
+    { side: "left", align: "end", class: "bottom-2" },
+    { side: "right", align: "start", class: "top-2" },
+    { side: "right", align: "center", class: "top-1/2 -translate-y-1/2" },
+    { side: "right", align: "end", class: "bottom-2" },
+  ],
+  defaultVariants: {
+    side: "top",
+    align: "center",
+  },
+});
+
 const contentVariants = cva(
   [
-    // Base styling
-    "group absolute z-50 text-center rounded-md bg-foreground px-3 py-1.5 text-xs text-background whitespace-nowrap",
-    // Hidden by default, visible when open
-    "opacity-0 pointer-events-none pointer-events-none",
-    // Animations
-    "transition-[opacity,transform,scale] duration-150 ease-out",
-    "data-[state=open]:opacity-100 data-[state=open]:pointer-events-auto data-[state=closed]:opacity-0 data-[state=closed]:pointer-events-none",
-    "data-[state=open]:animate-in data-[state=open]:fade-in-0 data-[state=open]:zoom-in-95",
-    "data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=closed]:zoom-out-95",
+    "z-50 duration-150 ease outline-hidden",
+    "relative w-fit max-w-xs rounded-md bg-foreground px-3 py-1.5 text-xs text-background shadow-md",
+    "data-[open]:animate-in data-[closed]:animate-out",
+    "data-[closed]:fade-out-0 data-[open]:fade-in-0",
+    "data-[closed]:zoom-out-95 data-[open]:zoom-in-95",
+    "data-[side=bottom]:slide-in-from-top-2 data-[side=top]:slide-in-from-bottom-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2",
+    "data-[instant]:transition-none! data-[instant]:animate-none! data-instant:data-closed:animate-none! data-instant:data-closed:fade-out-0!",
+    "[--origin-x:center] [--origin-y:center]",
+    "data-[side=top]:[--origin-y:bottom] data-[side=bottom]:[--origin-y:top]",
+    "data-[side=left]:[--origin-x:right] data-[side=right]:[--origin-x:left]",
+    "origin-[var(--origin-x)_var(--origin-y)] [--tw-animation-fill-mode:both]",
   ],
   {
     variants: {
       side: {
-        left: "data-[side=left]:slide-in-from-right-2 data-[side=left]:right-[calc(100%+var(--side-offset))] data-[side=left]:data-[align=center]:top-1/2 data-[side=left]:data-[align=center]:-translate-y-1/2",
-        top: "data-[side=top]:slide-in-from-bottom-2 data-[side=top]:bottom-[calc(100%+var(--side-offset))] data-[side=top]:data-[align=center]:left-1/2 data-[side=top]:data-[align=center]:-translate-x-1/2 data-[side=top]:data-[align=start]:left-0 data-[side=top]:data-[align=end]:right-0",
-        right:
-          "data-[side=right]:slide-in-from-left-2 data-[side=right]:left-[calc(100%+var(--side-offset))] data-[side=right]:data-[align=center]:top-1/2 data-[side=right]:data-[align=center]:-translate-y-1/2 data-[side=right]:data-[align=start]:right-0 data-[side=right]:data-[align=end]:left-0",
-        bottom:
-          "data-[side=bottom]:slide-in-from-top-2 data-[side=bottom]:top-[calc(100%+var(--side-offset))] data-[side=bottom]:data-[align=center]:left-1/2 data-[side=bottom]:data-[align=center]:-translate-x-1/2 data-[side=bottom]:data-[align=start]:left-0 data-[side=bottom]:data-[align=end]:right-0",
+        top: "",
+        bottom: "",
+        left: "",
+        right: "",
+      },
+      align: {
+        start: "",
+        center: "",
+        end: "",
       },
     },
+    compoundVariants: [
+      {
+        align: "start",
+        class:
+          "data-[side=top]:data-[align=start]:[--origin-x:left] data-[side=bottom]:data-[align=start]:[--origin-x:left] data-[side=left]:data-[align=start]:[--origin-y:top] data-[side=right]:data-[align=start]:[--origin-y:top]",
+      },
+      {
+        align: "center",
+        class:
+          "data-[side=top]:data-[align=center]:[--origin-x:center] data-[side=bottom]:data-[align=center]:[--origin-x:center] data-[side=left]:data-[align=center]:[--origin-y:center] data-[side=right]:data-[align=center]:[--origin-y:center]",
+      },
+      {
+        align: "end",
+        class:
+          "data-[side=top]:data-[align=end]:[--origin-x:right] data-[side=bottom]:data-[align=end]:[--origin-x:right] data-[side=left]:data-[align=end]:[--origin-y:bottom] data-[side=right]:data-[align=end]:[--origin-y:bottom]",
+      },
+    ],
     defaultVariants: {
       side: "top",
+      align: "center",
     },
   },
 );
-
-const indicatorVariants = cva("absolute border-4 ", {
-  variants: {
-    side: {
-      top: "border-foreground border-b-0 border-r-transparent border-l-transparent top-full data-[align=center]:-translate-x-1/2 data-[align=center]:left-1/2 data-[align=start]:left-2 data-[align=end]:right-2",
-      bottom:
-        "border-foreground border-t-0 border-r-transparent border-l-transparent bottom-full data-[align=center]:-translate-x-1/2 data-[align=center]:left-1/2 data-[align=start]:left-2 data-[align=end]:right-2",
-      left: "border-foreground border-r-0 border-t-transparent border-b-transparent left-full data-[align=center]:-translate-y-1/2 data-[align=center]:top-1/2 data-[align=start]:top-0 data-[align=end]:bottom-0",
-      right:
-        "border-foreground border-l-0 border-t-transparent border-b-transparent right-full data-[align=center]:-translate-y-1/2 data-[align=center]:top-1/2 data-[align=start]:top-0 data-[align=end]:bottom-0",
-    },
-  },
-});
 ---
 
-<div
-  {...rest}
-  data-slot="tooltip-content"
-  data-side={side}
-  data-side-offset={sideOffset}
-  data-align={align}
-  style={`--side-offset: ${sideOffset}px`}
-  class={cn(contentVariants({ side }), className)}
->
-  <slot />
-  <div
-    data-slot="tooltip-indicator"
-    data-align={align}
-    class={indicatorVariants({ side })}
-  >
+<div data-slot="tooltip-portal">
+  <div data-slot="tooltip-positioner" class="isolate z-50">
+    <div
+      {...rest}
+      hidden
+      data-slot="tooltip-content"
+      data-side={side}
+      data-side-offset={sideOffset}
+      data-align={align}
+      data-align-offset={alignOffset}
+      data-avoid-collisions={avoidCollisions === undefined
+        ? undefined
+        : String(avoidCollisions)}
+      data-collision-padding={collisionPadding}
+      data-portal={portal === undefined ? undefined : String(portal)}
+      class={cn(contentVariants({ side, align }), className)}
+    >
+      <slot />
+      <div
+        data-slot="tooltip-indicator"
+        class={indicatorVariants({ side, align })}
+      >
+      </div>
+    </div>
   </div>
 </div>
