--- a/packages/ui/src/components/dropdown-menu/DropdownMenuContent.astro
+++ b/packages/ui/src/components/dropdown-menu/DropdownMenuContent.astro
@@ -27,12 +27,7 @@ const contentVariants = cva([
   "data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0",
   "data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95",
   "data-[side=bottom]:slide-in-from-top-2 data-[side=top]:slide-in-from-bottom-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2",
-  "[--origin-x:center] [--origin-y:center]",
-  "data-[side=top]:[--origin-y:bottom] data-[side=bottom]:[--origin-y:top]",
-  "data-[side=left]:[--origin-x:right] data-[side=right]:[--origin-x:left]",
-  "data-[side=top]:data-[align=start]:[--origin-x:left] data-[side=top]:data-[align=center]:[--origin-x:center] data-[side=top]:data-[align=end]:[--origin-x:right] data-[side=bottom]:data-[align=start]:[--origin-x:left] data-[side=bottom]:data-[align=center]:[--origin-x:center] data-[side=bottom]:data-[align=end]:[--origin-x:right]",
-  "data-[side=left]:data-[align=start]:[--origin-y:top] data-[side=left]:data-[align=center]:[--origin-y:center] data-[side=left]:data-[align=end]:[--origin-y:bottom] data-[side=right]:data-[align=start]:[--origin-y:top] data-[side=right]:data-[align=center]:[--origin-y:center] data-[side=right]:data-[align=end]:[--origin-y:bottom]",
-  "origin-[var(--origin-x)_var(--origin-y)] [--tw-animation-fill-mode:both]",
+  "origin-(--transform-origin) [--tw-animation-fill-mode:both]",
 ]);
 ---
 
